force-app/main/default/objects/Google_Drive_File_Upload_log__c/Google_Drive_File_Upload_log__c.object-meta.xml
<CustomObject>
    <label>Google Drive File Upload log</label>
    <nameField>
        <displayFormat>LN-{0000}</displayFormat>
        <label>File Upload Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google Drive File Upload logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>