force-app/main/default/objects/Google_Drive_File_Upload_log__c/fields/File_ID__c.field-meta.xml
<CustomField>
    <fullName>File_ID__c</fullName>
    <label>File ID</label>
    <type>TextArea</type>
</CustomField>