force-app/main/default/objects/Google_Drive_File_Upload_log__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <type>TextArea</type>
</CustomField>