force-app/main/default/objects/Google_Drive_File_Upload_log__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <label>File Size</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>