force-app/main/default/objects/Google_Drive_File_Upload_log__c/fields/SF_Source_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>SF_Source_Record_URL__c</fullName>
    <label>SF Source Record URL</label>
    <type>Url</type>
</CustomField>