force-app/main/default/objects/Google_Drive_File_Upload_log__c/fields/Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Upload_Status__c</fullName>
    <label>Upload Status</label>
    <type>TextArea</type>
</CustomField>