force-app/main/default/objects/Google_Drive_File_Upload_log__c/fields/UploadedBy_Email__c.field-meta.xml
<CustomField>
    <fullName>UploadedBy_Email__c</fullName>
    <label>UploadedBy Email</label>
    <type>Email</type>
</CustomField>